--- a/sass/style.scss
+++ b/sass/style.scss
@@ -537,6 +537,10 @@ nav {
         .col-3:hover .div-text {
             background-color: #ff3115;
         }
+        // .div-icons-item {
+        //     position: absolute;
+        //     top: -20%;
+        // }
         .div-icons {
             width: 110px;
             height: 100px;
@@ -849,6 +853,7 @@ nav {
                 p {
                     color: #888888;
                     margin: 30px 0;
+                    line-height: 25px;
                 }
                 img {
                     width: 100%;
@@ -1067,6 +1072,115 @@ nav {
             margin-bottom: 30px;
             width: 12%;
             border-color: #ff3115;
+        }
+    }
+}
+
+#section-news {
+    margin-top: 60px;
+    display: flex;
+    justify-content: center;
+    .row-news-header {
+        display: flex;
+        justify-content: center;
+    }
+    .news-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 60px 0;
+        h2 {
+            font-size: 25px;
+        }
+        p {
+            color: #3a3a3a;
+            margin: 15px 0;
+        }
+        hr {
+            border-color: #ff3115;
+            width: 20%;
+        }
+    }
+    i {
+        color: #ff3115;
+    }
+    .news-card-lg {
+        transition: 0.5s;
+        cursor: pointer;
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+        border: 1px solid #cccccc;
+        justify-content: space-around;
+        .news-image {
+            text-align: center;
+        }
+        p {
+            color: #888888;
+            line-height: 25px;
+        }
+        a {
+            color: white;
+            padding: 5px 15px;
+            background-color: #ff3115;
+            width: 19%;
+            font-size: 15px;
+            text-align: center;
+            transition: 0.5s;
+        }
+        a:hover {
+            background-color: #cc2712
+        }
+        .news-date {
+            span {
+                font-size: 15px;
+                color: #888888
+            }
+        }
+        h4 {
+            font-size: 20px;
+            cursor: pointer;
+            transition: 0.5s;
+        }
+        h4:hover {
+            color: #ff3115;
+        }
+    }
+    .news-card-lg:hover {
+        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+    }
+    .news-card-sm {
+        display: flex;
+        border: 1px solid #cccccc;
+        padding: 0;
+        img {
+            max-width: 100%;
+        }
+        .news-card-sm-text {
+            .flex {
+                margin: 15px 0;
+                i {
+                    margin-right: 10px;
+                    display: flex;
+                    align-items: center;
+                }
+                p {
+                    color: #888888;
+                    font-size: 15px;
+                }
+            }
+        }
+        h4 {
+            font-size: 15px;
+            cursor: pointer;
+            transition: 0.5s;
+        }
+        h4:hover {
+            color: #ff3115;
+        }
+        p {
+            color: #5c5c5c;
+            line-height: 25px;
         }
     }
 }
